--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -37,6 +37,7 @@ nav {
     /* border: .1px solid var(--primary); */
     box-shadow: 1px 0 3px var(--white);
     background-color: var(--bg-color);
+    z-index: 9999;
 }
 
 .brand {
@@ -115,7 +116,7 @@ section {
     padding: 0 10%;
     height: 100vh;
     box-sizing: border-box;
-/*    border: 2px solid darkred;*/
+    border: 2px solid darkred;
 }
 
 #home {
@@ -158,7 +159,6 @@ section {
     width: 40%;
     padding: 15px 0 10px;
     box-sizing: border-box;
-/*    border: 2px solid white;*/
 
 }
 
@@ -239,10 +239,8 @@ section {
 }
 
 .left-profile {
-/*    width: 45%;*/
     flex: 1.5;
     box-sizing: border-box;
-/*    border: 2px solid green;*/
 }
 
 .pic-profile {
@@ -250,11 +248,9 @@ section {
 }
 
 .right-profile {
-/*    width: 60%;*/
     flex: 2.5;
     padding: 1em 1em;
     box-sizing: border-box;
-/*    border: 2px solid blue;*/
 }
 
 .about-me {
@@ -285,41 +281,61 @@ section {
 .text-about-me {
     padding-top: 5%;
     text-align: justify;
+    line-height: 1.7;
 }
 
 /*SECTION PROFILE END*/
 
 /*SECTION PROJECT START*/
 
-#project {
+#project,
+#talk {
     padding-top: 7%;
 }
 
 .project-container {
     width: 100%;
     box-sizing: border-box;
-/*    border: 2px solid skyblue;*/
 }
 
-.nav-project {
-/*    border: 1px solid yellow;*/
-}
-
-.nav-project h1 {
+.nav-project h1,
+.contact h1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
     text-align: center;
     text-transform: capitalize;
+
+}
+
+.nav-project h1::after,
+.contact h1::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 465px;
+    width: 150px;
+    border-bottom: 2px solid var(--primary);
+    animation: projectAnimate 3s alternate infinite;
+}
+
+@keyframes projectAnimate {
+    0% {
+        transform: scale(.3);
+    }
+    100% {
+        transform: scale(1.0);
+    }
 }
 
 .swiper {
     height: 100%;
     margin-top: 20px;
-/*    border: 2px solid salmon;*/
-/*    background-color: red;*/
 }
 
-.swiper > .swiper-wrapper {
+.swiper .swiper-wrapper {
     height: 75%;
-/*    background-color: green;*/
 }
 
 
@@ -330,25 +346,55 @@ section {
     border-radius: 45px;
     box-sizing: border-box;
     cursor: pointer;
-/*    border: 2px solid white;*/
 }
 
-.slide  img {
-/*    display: inline-flex;*/
+.slide img {
     object-fit: cover;
     object-position: 0 2px;
     padding: 10px 10px;
     cursor: pointer;
-/*    border: .7px solid var(--primary);*/
+    border: .3px solid var(--primary);
 }
-
-
 
 .swiperBtn::after{
     font-weight: 600;
     color: var(--primary);
 }
 
+.imgSpan {
+    position: absolute;
+    bottom: 60px;
+    left: 100px;
+    font-size: 1.3em;
+    letter-spacing: 1.2px;
+    text-transform: capitalize;
+/*    border: 1px solid red;*/
+}
+
+.imgSpanSet {
+    position: absolute;
+    bottom: 60px;
+    right: 100px;
+    font-size: 1.3em;
+    letter-spacing: 1.2px;
+    color: var(--bg-color);
+    text-transform: capitalize;
+}
 
 
 /*SECTION PROJECT END*/
+
+/*SECTION TALK STAR*/
+
+#talk {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact h1::after {
+    position: absolute;
+    right: -10.4px;
+}
+
+/*SECTION TALK END*/
