--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -35,7 +35,6 @@ nav {
     left: 0;
     right: 0;
     padding: 10px 10%;
-    /* border: .1px solid var(--primary); */
     box-shadow: 1px 0 3px var(--white);
     background-color: var(--bg-color);
     z-index: 9999;
@@ -48,6 +47,7 @@ nav {
     letter-spacing: .1em;
     position: relative;
     cursor: default;
+/*    border: 1px solid red;*/
 }
 
 .brand::after {
@@ -66,6 +66,7 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
+/*    border: 1px solid white;*/
 }
 
 .menu a {
@@ -543,9 +544,6 @@ input[type="radio"]{
 .btn:hover {
     color: var(--white);
 }
-
-
-
 
 
 /*SECTION TALK END*/
