--- a/Assets/css/media.css
+++ b/Assets/css/media.css
@@ -9,7 +9,7 @@
     section {
         padding: 0 7px;
         height: auto;
-/*        border: 1px solid green;*/
+        padding-bottom : 30px;
     }
 
     nav {
